--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
 
     <h1>MWS Playground</h1>
     
+    <section>
+        <h2>CSS Grid</h2>
+        <div class="css-grid">
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">3</div>
+                <div class="col">4</div>
+            </div>
+            <div class="row">
+                <div class="col">5</div>
+                <div class="col">6</div>
+                <div class="col">7</div>
+                <div class="col">8</div>
+            </div>
+            <div class="row">
+                <div class="col">9</div>
+                <div class="col">10</div>
+                <div class="col">11</div>
+                <div class="col">12</div>
+            </div>
+        </div>
+    </section>
+
     <script src="index.js"></script>
 </body>
 </html>
