--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
         </div>
     </section>
 
+    <section>
+        <form action="#">
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name">
+            <label for="age">Age:</label>
+            <input type="number" name="age" id="age">
+            <label for="sex">Sex:</label>
+            <select name="sex" id="sex">
+                <option value="male">male</option>
+                <option value="female">female</option>
+            </select>
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" autocomplete="password">
+            <label for="cpassword">Confirm Password:</label>
+            <input type="password" name="cpassword" id="cpassword" autocomplete="new-password">
+        </form>
+    </section>
+
     <script src="index.js"></script>
 </body>
 </html>
