Create selectable menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
 
     <link rel="stylesheet" href="styles/main.css" />
 </head>
+
 <body>
 
     <h1>MWS Playground</h1>
-    
+
     <section>
         <h2>CSS Grid</h2>
         <div class="css-grid">
@@ -54,6 +56,19 @@
         </form>
     </section>
 
+    <section class="food-menu">
+        <h2>Selectable Menus</h2>
+        <p>Hold down Ctrl or Cmd key to select multiple items</p>
+        <ul>
+            <li>Akpu</li>
+            <li>Garri</li>
+            <li>Beans</li>
+            <li>Rice</li>
+            <li>Pepper Soup</li>
+        </ul>
+    </section>
+
     <script src="index.js"></script>
 </body>
+
 </html>
