Add unicode characters

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
             <li>Pepper Soup</li>
         </ul>
     </section>
-
+    <section>
+        <h2>unicode characters </h2>
+        <span>🥃</span>
+        <span>桮</span>
+    </section>
     <script src="index.js"></script>
 </body>
 
