Create simple grid layout

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
         <span>🥃</span>
         <span>桮</span>
     </section>
+    <section id="grid">
+        <div>One</div>
+        <div>Two</div>
+        <div>Three</div>
+        <div>Four</div>
+        <div>Five</div>
+    </section>
     <script src="index.js"></script>
 </body>
 
