--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
     </section>
     <section id="grid">
         <div>One</div>
-        <div>Two</div>
+        <div>Two
+            <p>I have some more content in.</p>
+            <p>This makes me taller than 100 pixels.</p>
+        </div>
         <div>Three</div>
         <div>Four</div>
         <div>Five</div>
