Scatter contents of a single grid element Use "display: contents" property to reflow contents of grid item as though they are grid items themselves

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p>This makes me taller than 100 pixels.</p>
         </div>
         <div>Three</div>
-        <div>Four, This block is absolutely positioned. In this example the grid container is the containing block and so the absolute positioning offset values are calculated in from the outer edges of the area it has been placed into. </div>
+        <div>Four</div>
         <div>Five</div>
     </section>
     <script src="index.js"></script>
